# dynamic_analysis

./: .cproject  .gitignore  .project  Errors.md  Makefile  Objectives.md  Objectivs.md  README.md  bashrc  dyanmic_analysis.code-workspace
debuginfo/: Makefile  (+15 more)
pin/source/tools/PAS/: CMakeLists.txt  InstructionInstrumentation.cpp  InstructionInstrumentation.h  PAS_Example.csv  clean_output  config.txt  database_access_api.cpp  database_access_api.h  database_direct_access.cpp  database_direct_access.h  fileops.cpp  fileops.h  functionInvocation.cpp  functionInvocation.h  function_call.cpp  function_call.h  function_invocation.csv  global.cpp  global.h  makefile.rules  makefile.rules~  malloc.csv  malloc_free.cpp  malloc_free.h  memory_access.cpp  memory_access.h  monitor_registers.cpp  monitor_registers.h  mystdout  out  out.old  pas_analysis.cpp  pas_analysis.h  pop.csv  push.csv  read_direct.csv  read_indirect.csv  register.csv  return.cpp  return.csv  (+17 more)
vaccs_pin_cpp/: CMakeLists.txt  Makefile
vaccs_pin_cpp/execs/: Makefile
vaccs_pin_cpp/execs/dwread/: Makefile  PAS_Example  dwread  dwread.cpp
vaccs_pin_cpp/execs/dwwrite/: Makefile  dwwrite  dwwrite.cpp
vaccs_pin_cpp/execs/test_dwread/: test_dwread.cpp
vaccs_pin_cpp/execs/test_dwread/input/: PAS_Example.s
vaccs_pin_cpp/execs/test_vaccs_dwread/: Makefile  test_vaccs_dwread.cpp
vaccs_pin_cpp/execs/test_vaccs_dwread/input/: PAS_Example.c  PAS_Example.dwarf
vaccs_pin_cpp/execs/test_vio/: .gitignore  Makefile  inv.vaccs  test_io.cpp
vaccs_pin_cpp/execs/test_vio/input/: bin.vaccs  c_src.vaccs  out.vaccs  reg.vaccs  ret.vaccs  ret_addr.vaccs  sd_clear.vaccs  sign-output.vaccs
vaccs_pin_cpp/libs/: Makefile
vaccs_pin_cpp/libs/io/: Makefile  arch_record.cpp  arch_record.h  asm_record.cpp  asm_record.h  binary_record.cpp  binary_record.h  ccode_record.cpp  ccode_record.h  cmd_line_record.cpp  cmd_line_record.h  file_close_record.cpp  file_close_record.h  file_open_record.cpp  file_open_record.h  file_read_record.cpp  file_read_record.h  file_write_record.cpp  file_write_record.h  free_record.cpp  free_record.h  func_inv_record.cpp  func_inv_record.h  line_change_record.cpp  line_change_record.h  malloc_record.cpp  malloc_record.h  out  output_record.cpp  output_record.h  register_record.cpp  register_record.h  return_addr_record.cpp  return_addr_record.h  return_record.cpp  return_record.h  sd_clear_record.cpp  sd_clear_record.h  sd_czero_record.cpp  sd_czero_record.h  (+16 more)
vaccs_pin_cpp/libs/libelfin/dwarf/: Makefile  data.hh  expr.cc
vaccs_pin_cpp/libs/read/: dw_reader.h  out
vaccs_pin_cpp/libs/tables/: '  Makefile  config.txt  cu_table.cpp  cu_table.h  deref.cpp  deref.h  fd_table.cpp  fd_table.h  frame.cpp  frame.h  heap.cpp  heap.h  out  symbol_table.cpp  symbol_table.h  symbol_table_factory.cpp  symbol_table_factory.h  type_table.cpp  type_table.h  var_table.cpp  var_table.h
vaccs_pin_cpp/libs/tempread/: Makefile  base_expr_context.h  dw_reader.cpp
vaccs_pin_cpp/libs/util/: Makefile  general.cpp  general.h  memory_info.cpp  memory_info.h  out  vaccs_cfg.l  vaccs_config.cpp  vaccs_config.h  vaccs_error_message.cpp  vaccs_error_message.h  vaccs_source_location.cpp  vaccs_source_location.h
vaccs_pin_cpp/libs/vaccs_read/: Makefile  vaccs_dw_reader.cpp  vaccs_dw_reader.h
vaccs_pin_cpp/tests/: Makefile
vaccs_pin_cpp/tests/test_vio/: test_io.cpp
(+247 files in other folders)
