cmake_minimum_required(VERSION 3.14)
project(vaccs_pin_cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(libs/io)
include_directories(libs/tables)
include_directories(libs/test)
include_directories(libs/util)
include_directories(libs/vaccs_read)

add_executable(vaccs_pin_cpp
        libs/io/arch_record.cpp
        libs/io/arch_record.h
        libs/io/asm_record.cpp
        libs/io/asm_record.h
        libs/io/binary_record.cpp
        libs/io/binary_record.h
        libs/io/ccode_record.cpp
        libs/io/ccode_record.h
        libs/io/cmd_line_record.cpp
        libs/io/cmd_line_record.h
        libs/io/func_inv_record.cpp
        libs/io/func_inv_record.h
        libs/io/output_record.cpp
        libs/io/output_record.h
        libs/io/register_record.cpp
        libs/io/register_record.h
        libs/io/return_addr_record.cpp
        libs/io/return_addr_record.h
        libs/io/return_record.cpp
        libs/io/return_record.h
        libs/io/sd_clear_record.cpp
        libs/io/sd_clear_record.h
        libs/io/sd_czero_record.cpp
        libs/io/sd_czero_record.h
        libs/io/sd_lock_record.cpp
        libs/io/sd_lock_record.h
        libs/io/sd_set_record.cpp
        libs/io/sd_set_record.h
        libs/io/sd_unlock_record.cpp
        libs/io/sd_unlock_record.h
        libs/io/section_record.cpp
        libs/io/section_record.h
        libs/io/vaccs_record.cpp
        libs/io/vaccs_record.h
        libs/io/vaccs_record_factory.cpp
        libs/io/vaccs_record_factory.h
        libs/io/vaccs_record_reader.cpp
        libs/io/vaccs_record_reader.h
        libs/io/var_access_record.cpp
        libs/io/var_access_record.h
        libs/tables/cu_table.cpp
        libs/tables/cu_table.h
        libs/tables/deref.cpp
        libs/tables/deref.h
        libs/tables/frame.cpp
        libs/tables/frame.h
        libs/tables/symbol_table.cpp
        libs/tables/symbol_table.h
        libs/tables/symbol_table_factory.cpp
        libs/tables/symbol_table_factory.h
        libs/tables/type_table.cpp
        libs/tables/type_table.h
        libs/tables/var_table.cpp
        libs/tables/var_table.h
        libs/test/catch.hpp
        libs/util/c_string_utils.cpp
        libs/util/c_string_utils.h
        libs/util/general.cpp
        libs/util/general.h
        libs/vaccs_read/vaccs_dw_reader.cpp
        libs/vaccs_read/vaccs_dw_reader.h
        libs/Makefile
        tests/test_vio/test_io.cpp
        tests/Makefile
        Makefile)
